cmake_minimum_required(VERSION 3.11)

if(${MALLOC_IMPL} STREQUAL "tcmalloc")
  find_package(gperftools REQUIRED)
  list(APPEND CORE_DEPS gperftools::gperftools)
endif()

if(${MALLOC_IMPL} STREQUAL "jemalloc")
  find_package(jemalloc REQUIRED)
  list(APPEND CORE_DEPS jemalloc::jemalloc)
endif()

find_package(Boost REQUIRED)
find_package(cxxopts REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(spdlog REQUIRED)
find_package(zmarok-semver REQUIRED)

add_subdirectory(logging)
add_subdirectory(options)
add_subdirectory(sobject)
add_subdirectory(file_watcher)
add_subdirectory(version)

find_package(folly QUIET)
if (${folly_FOUND})
  find_package(benchmark REQUIRED)
  find_package(flatbuffers REQUIRED)
  find_package(prometheus-cpp REQUIRED)
  find_package(userspace-rcu REQUIRED)
  add_subdirectory(metrics)
  add_subdirectory(cache)
  add_subdirectory(fds)
  add_subdirectory(settings)
  add_subdirectory(utility)
  add_subdirectory(wisr)

  find_package(gRPC QUIET)
  if(${gRPC_FOUND})
    add_subdirectory(flip)
    add_subdirectory(grpc)
  endif()
endif()
